--- a/原型/小乐参谋原型/小乐参谋后台原型6-25/内部分析模块.html
+++ b/原型/小乐参谋原型/小乐参谋后台原型6-25/内部分析模块.html
@@ -9,16 +9,29 @@
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/内部分析模块/styles.css" type="text/css" rel="stylesheet"/>
+    <script src = "resources/scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="resources/scripts/wangEditor.min.js"></script>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/prototypePre.js"></script>
     <script src="data/document.js"></script>
     <script src="resources/scripts/prototypePost.js"></script>
     <script src="files/内部分析模块/data.js"></script>
+
     <script type="text/javascript">
+
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
       $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
+    </script>
+    <script>
+        //获取html
+        $(document).ready(function(){
+            $("#u1277").click(function(){
+              window.alert("hello world");
+              window.alert(editor.txt.html());
+            });
+          });
     </script>
   </head>
   <body>
@@ -901,27 +914,114 @@
                 <input id="u1281_input" type="text" value=""/>
               </div>
 
-              <!-- Unnamed (图片) -->
-              <div id="u1282" class="ax_default _图片">
-                <img id="u1282_img" class="img " src="images/内部分析模块/u1282.png"/>
-              </div>
-
               <!-- Unnamed (文本框) -->
               <div id="u1283" class="ax_default text_field">
                 <input id="u1283_input" type="text" value=""/>
               </div>
 
+             <div id="u1282" style = "width:1000px; height:200px; padding-top:30px;">
+
+                          </div>
+                            <script type="text/javascript">
+                              var E = window.wangEditor
+                              var editor = new E('#u1282')
+                              var $text1 = $('#text1')
+
+                              editor.customConfig.lang = {
+                             '设置标题': 'title',
+                             '字号':'font',
+                             '正文': 'p',
+                             '链接文字': 'link text',
+                             '链接': 'link',
+                             '上传图片': 'upload image',
+                             '上传': 'upload',
+                             '创建': 'init'
+                             // 还可自定添加更多
+                           }
+
+                            editor.customConfig.pasteIgnoreImg = true; // 纯文本 粘贴图片(无)
+
+                            editor.customConfig.onchange = function (html) {
+                               // 监控变化，同步更新到 textarea
+                                $text1.val(html)
+                            }
+
+                             /*onfocus函数*/
+                             editor.customConfig.onfocus = function () {
+                              console.log("onfocus")
+                            }
+
+                            /*Onblur*/
+                            editor.customConfig.onblur = function (html) {
+                              // html 即编辑器中的内容
+                              console.log('onblur', html)
+                            }
+                            /*设置菜单内容*/
+                            editor.customConfig.menus = [
+                                'head',  // 标题
+                                'bold',  // 粗体
+                                'fontSize',  // 字号
+                                'fontName',  // 字体
+                                'italic',  // 斜体
+                                'underline',  // 下划线
+                                'strikeThrough',  // 删除线
+                                'foreColor',  // 文字颜色
+                                'backColor',  // 背景颜色
+                                'link',  // 插入链接
+                                'list',  // 列表
+                                'justify',  // 对齐方式
+                                'quote',  // 引用
+                                'image',  // 插入图片
+                                'table',  // 表格
+                                'undo',  // 撤销
+                                'redo'  // 重复
+                            ]
+                            /*编辑字体*/
+                            editor.customConfig.fontNames = [
+                                '宋体',
+                                '微软雅黑',
+                                'Arial',
+                                'Tahoma',
+                                'Verdana',
+                                '华文新魏',
+                                '华文楷体',
+                                '华文仿宋',
+                                '新宋体',
+                                '黑体',
+                                '隶书',
+                                '华文行楷',
+                                '方正舒体',
+                                '方正姚体',
+                                '等线'
+                            ]
+                            editor.customConfig.uploadImgShowBase64 = true; //上传图片 base64格式保存
+                              editor.customConfig.linkImgCallback = function (url) {
+                                 console.log(url) // url 即插入图片的地址
+                            }
+
+                            editor.create()
+                            editor.txt.html('<span>请输入内容</span>');
+                            $text1.val(editor.txt.html())
+                          </script>
+                            <!-- Unnamed (图片) -->
+              <!--            <div id="u1282" class="ax_default _图片">
+                              <img id="u1282_img" class="img " src="images/内部分析模块/u1282.png"/>
+                            </div>-->
+                            <!-- Unnamed (多行文本框) -->
+              <!--              <div id="u1285" class="ax_default text_area">
+                              <textarea id="u1285_input"></textarea>
+                            </div>
+              -->
+                            <!-- Unnamed (水平线) -->
+
+
+
               <!-- Unnamed (矩形) -->
-              <div id="u1284" class="ax_default box_1">
+            <!--  <div id="u1284" class="ax_default box_1">
                 <div id="u1284_div" class=""></div>
-              </div>
+              </div>-->
 
-              <!-- Unnamed (多行文本框) -->
-              <div id="u1285" class="ax_default text_area">
-                <textarea id="u1285_input"></textarea>
-              </div>
 
-              <!-- Unnamed (水平线) -->
               <div id="u1286" class="ax_default line">
                 <img id="u1286_img" class="img " src="images/内部分析模块/u1279.png"/>
               </div>
